--- a/Task 3/Dockerfile
+++ b/Task 3/Dockerfile
@@ -8,6 +8,8 @@ RUN apt-get update && apt-get install -y \
     golang \
     g++ \
     python3\
+    python3-pip\
+    git\
     && rm -rf /var/lib/apt/lists/*
 
 # Set the working directory to /boringssl
@@ -21,8 +23,9 @@ COPY . /boringssl
 RUN cmake -GNinja -B build && \
     ninja -C build
 
-# Compile the server.cpp file
-RUN python3 QKDFetch.py
+RUN pip3 install requests
+
+#RUN python3 QKDFetch.py
 
 # Expose port 8080
 EXPOSE 8080
