--- a/Task 2/oqs-nginx/Dockerfile
+++ b/Task 2/oqs-nginx/Dockerfile
@@ -27,7 +27,7 @@ ARG INSTALLDIR=${BASEDIR}/nginx
 ARG SIG_ALG="rsa:2048"
 
 # defines the list of default groups to be activated in nginx-openssl config:
-ARG DEFAULT_GROUPS=x25519:x448:kyber512:p256_kyber512:kyber768:p384_kyber768:kyber1024:p521_kyber1024:X25519MLKEM768:mlkem768
+ARG DEFAULT_GROUPS=x25519:x448:kyber512:p256_kyber512:kyber768:p384_kyber768:kyber1024:p521_kyber1024:x25519_kyber768:X25519MLKEM768:mlkem768
 
 # define the nginx version to include
 ARG NGINX_VERSION=1.27.2
